// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuideNext renders the default copy on the final guide 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-top: 1px solid #E8EDEB;
  margin-bottom: 24px;
  padding-top: 56px;
}

@media not all and (max-width: 1023px) {
  .emotion-0 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 34px;
  }
}

.emotion-2 p {
  margin-top: 8px;
}

@media not all and (max-width: 1023px) {
  .emotion-2 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

.emotion-4 {
  color: #5C6C75;
  font-size: 16px;
  margin-bottom: 16px;
}

.emotion-6 {
  font-size: 24px;
  font-weight: bold;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #00684A;
  border-color: #00684A;
  color: #FFFFFF;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8[disabled],
.emotion-8:disabled {
  pointer-events: none;
}

.emotion-8:active,
.emotion-8:focus,
.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8:hover,
.emotion-8:active {
  color: #FFFFFF;
  background-color: #00593f;
  border-color: #00593f;
  box-shadow: 0 0 0 3px #C0FAE6;
}

.emotion-8:focus {
  color: #FFFFFF;
  background-color: #00593f;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-9 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-10 {
  display: grid;
  grid-auto-flow: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  pointer-events: none;
  position: relative;
  z-index: 0;
  padding: 0 11px;
  gap: 6px;
}

.emotion-11 {
  position: relative;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: border,box-shadow;
  border: 1px solid #E8EDEB;
  box-shadow: 0 4px 10px -4px rgba(0,30,43,0.3);
  background-color: white;
  color: #1C2D38;
  border-radius: 24px;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 13px;
  line-height: 20px;
  padding: 24px;
  min-height: 68px;
  margin-top: 40px;
  padding: 40px 24px;
}

@media not all and (max-width: 767px) {
  .emotion-11 {
    padding: 48px;
  }
}

@media not all and (max-width: 1023px) {
  .emotion-11 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    min-width: 300px;
    margin-top: 0;
    max-width: 510px;
  }
}

.emotion-12 {
  margin-bottom: 24px;
}

@media not all and (max-width: 767px) {
  .emotion-12 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 16px;
    margin-bottom: 34px;
  }
}

.emotion-15 {
  background-color: #E3FCF7;
  border-radius: 4px;
  color: #001E2B;
  font-size: 13px;
  font-weight: bold;
  line-height: 24px;
  height: 24px;
  text-align: center;
  width: 83px;
  margin-bottom: 8px;
}

.emotion-17 {
  color: #001E2B;
  font-weight: bold;
}

.emotion-19 {
  list-style: none;
  padding-left: 0;
}

.emotion-21 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 40px;
  padding-top: 0!important;
  position: relative;
}

.emotion-21:not(:last-child) {
  padding-bottom: 16px;
}

.emotion-21:not(:last-child):before {
  content: '';
  position: absolute;
  left: 10px;
  top: 20px;
  height: calc(100% - 20px);
  border-left: solid 1px #00A35C;
}

.emotion-23 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 12px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-25 {
  color: #00A35C;
}

.emotion-27 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
  line-height: 13px;
  outline: none;
  color: #016BF8;
  color: #001E2B;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-27:focus {
  outline: none;
}

.emotion-27>code {
  color: #016BF8;
}

.emotion-27::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.emotion-27:focus .emotion-27::after {
  background-color: #0498EC;
}

.emotion-27:hover::after {
  background-color: #E8EDEB;
}

.emotion-27:hover,
.emotion-27:active {
  color: currentColor;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        What's Next
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        Become a MongoDB Professional
      </div>
      <p>
        Congrats. You’ve completed all the guides. Want to take the next step? Register for the developer exam.
      </p>
      <a
        aria-disabled="false"
        class="emotion-8"
        data-leafygreen-ui="button"
        href="https://university.mongodb.com/certification/developer/about"
      >
        <div
          class="emotion-9"
        />
        <div
          class="emotion-10"
        >
          Learn More
        </div>
      </a>
    </div>
    <div
      class="emotion-11"
    >
      <div
        class="emotion-12 emotion-13"
      >
        <div
          class="emotion-14 emotion-15 emotion-16"
        >
          Chapter 2
        </div>
        <div
          class="emotion-17 emotion-18"
        >
          CRUD
        </div>
      </div>
      <ul
        class="emotion-19 emotion-20"
      >
        <li
          class="emotion-21 emotion-22"
          color="#00A35C"
        >
          <div
            class="emotion-23 emotion-24"
            color="transparent"
          >
            <svg
              aria-label="Checkmark Icon"
              class="emotion-25"
              fill="none"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6.306 9.05l5.455-5.455a1 1 0 011.414 0l.707.707a1 1 0 010 1.414l-7.067 7.068a1 1 0 01-1.5-.098l-3.049-3.97a1 1 0 01.184-1.402l.595-.457a1.25 1.25 0 011.753.23L6.306 9.05z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <a
            class="emotion-26 emotion-27"
            href="/server/read/"
          >
            Read Data in MongoDB
          </a>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GuideNext renders the first guide in the next chapter 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-top: 1px solid #E8EDEB;
  margin-bottom: 24px;
  padding-top: 56px;
}

@media not all and (max-width: 1023px) {
  .emotion-0 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 34px;
  }
}

.emotion-2 p {
  margin-top: 8px;
}

@media not all and (max-width: 1023px) {
  .emotion-2 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

.emotion-4 {
  color: #5C6C75;
  font-size: 16px;
  margin-bottom: 16px;
}

.emotion-6 {
  font-size: 24px;
  font-weight: bold;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #00684A;
  border-color: #00684A;
  color: #FFFFFF;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8[disabled],
.emotion-8:disabled {
  pointer-events: none;
}

.emotion-8:active,
.emotion-8:focus,
.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8:hover,
.emotion-8:active {
  color: #FFFFFF;
  background-color: #00593f;
  border-color: #00593f;
  box-shadow: 0 0 0 3px #C0FAE6;
}

.emotion-8:focus {
  color: #FFFFFF;
  background-color: #00593f;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-9 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-10 {
  display: grid;
  grid-auto-flow: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  pointer-events: none;
  position: relative;
  z-index: 0;
  padding: 0 11px;
  gap: 6px;
}

.emotion-11 {
  position: relative;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: border,box-shadow;
  border: 1px solid #E8EDEB;
  box-shadow: 0 4px 10px -4px rgba(0,30,43,0.3);
  background-color: white;
  color: #1C2D38;
  border-radius: 24px;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 13px;
  line-height: 20px;
  padding: 24px;
  min-height: 68px;
  margin-top: 40px;
  padding: 40px 24px;
}

@media not all and (max-width: 767px) {
  .emotion-11 {
    padding: 48px;
  }
}

@media not all and (max-width: 1023px) {
  .emotion-11 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    min-width: 300px;
    margin-top: 0;
    max-width: 510px;
  }
}

.emotion-12 {
  margin-bottom: 24px;
}

@media not all and (max-width: 767px) {
  .emotion-12 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 16px;
    margin-bottom: 34px;
  }
}

.emotion-15 {
  background-color: #E3FCF7;
  border-radius: 4px;
  color: #001E2B;
  font-size: 13px;
  font-weight: bold;
  line-height: 24px;
  height: 24px;
  text-align: center;
  width: 83px;
  margin-bottom: 8px;
}

.emotion-17 {
  color: #001E2B;
  font-weight: bold;
}

.emotion-19 {
  list-style: none;
  padding-left: 0;
}

.emotion-21 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 40px;
  padding-top: 0!important;
  position: relative;
}

.emotion-21:not(:last-child) {
  padding-bottom: 16px;
}

.emotion-21:not(:last-child):before {
  content: '';
  position: absolute;
  left: 10px;
  top: 20px;
  height: calc(100% - 20px);
  border-left: solid 1px #E8EDEB;
}

.emotion-23 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border: solid 1px #00A35C;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 12px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-25 {
  color: #00A35C;
}

.emotion-27 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
  line-height: 13px;
  outline: none;
  color: #016BF8;
  color: #001E2B;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-27:focus {
  outline: none;
}

.emotion-27>code {
  color: #016BF8;
}

.emotion-27::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.emotion-27:focus .emotion-27::after {
  background-color: #0498EC;
}

.emotion-27:hover::after {
  background-color: #E8EDEB;
}

.emotion-27:hover,
.emotion-27:active {
  color: currentColor;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        What's Next
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        Read Data in MongoDB
      </div>
      <a
        aria-disabled="false"
        class="emotion-8"
        data-leafygreen-ui="button"
        href="server/read"
      >
        <div
          class="emotion-9"
        />
        <div
          class="emotion-10"
        >
          Start Guide
        </div>
      </a>
    </div>
    <div
      class="emotion-11"
    >
      <div
        class="emotion-12 emotion-13"
      >
        <div
          class="emotion-14 emotion-15 emotion-16"
        >
          Chapter 2
        </div>
        <div
          class="emotion-17 emotion-18"
        >
          CRUD
        </div>
      </div>
      <ul
        class="emotion-19 emotion-20"
      >
        <li
          class="emotion-21 emotion-22"
          color="#E8EDEB"
        >
          <div
            class="emotion-23 emotion-24"
            color="#00A35C"
          >
            <svg
              class="emotion-25"
              fill="currentColor"
              height="12"
              viewBox="0 0 7 12"
              width="7"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.47516 3.75H3.95081L4.88268 0.707813C4.97017 0.351563 4.71862 0 4.37518 0H1.22522C0.96272 0 0.739598 0.208594 0.704598 0.4875L0.00460634 6.1125C-0.0369557 6.45 0.208042 6.75 0.525225 6.75H3.12176L2.11333 11.3086C2.03458 11.6648 2.28833 12 2.62301 12C2.80676 12 2.98176 11.8969 3.07801 11.7188L6.92797 4.59375C7.1314 4.22109 6.87984 3.75 6.47516 3.75Z"
              />
            </svg>
          </div>
          <a
            class="emotion-26 emotion-27"
            href="/server/read/"
          >
            Read Data in MongoDB
          </a>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GuideNext renders the next guide in the same chapter 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-top: 1px solid #E8EDEB;
  margin-bottom: 24px;
  padding-top: 56px;
}

@media not all and (max-width: 1023px) {
  .emotion-0 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 34px;
  }
}

.emotion-2 p {
  margin-top: 8px;
}

@media not all and (max-width: 1023px) {
  .emotion-2 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

.emotion-4 {
  color: #5C6C75;
  font-size: 16px;
  margin-bottom: 16px;
}

.emotion-6 {
  font-size: 24px;
  font-weight: bold;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #00684A;
  border-color: #00684A;
  color: #FFFFFF;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8[disabled],
.emotion-8:disabled {
  pointer-events: none;
}

.emotion-8:active,
.emotion-8:focus,
.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8:hover,
.emotion-8:active {
  color: #FFFFFF;
  background-color: #00593f;
  border-color: #00593f;
  box-shadow: 0 0 0 3px #C0FAE6;
}

.emotion-8:focus {
  color: #FFFFFF;
  background-color: #00593f;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-9 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-10 {
  display: grid;
  grid-auto-flow: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  pointer-events: none;
  position: relative;
  z-index: 0;
  padding: 0 11px;
  gap: 6px;
}

.emotion-11 {
  position: relative;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: border,box-shadow;
  border: 1px solid #E8EDEB;
  box-shadow: 0 4px 10px -4px rgba(0,30,43,0.3);
  background-color: white;
  color: #1C2D38;
  border-radius: 24px;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 13px;
  line-height: 20px;
  padding: 24px;
  min-height: 68px;
  margin-top: 40px;
  padding: 40px 24px;
}

@media not all and (max-width: 767px) {
  .emotion-11 {
    padding: 48px;
  }
}

@media not all and (max-width: 1023px) {
  .emotion-11 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    min-width: 300px;
    margin-top: 0;
    max-width: 510px;
  }
}

.emotion-12 {
  margin-bottom: 24px;
}

@media not all and (max-width: 767px) {
  .emotion-12 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 16px;
    margin-bottom: 34px;
  }
}

.emotion-15 {
  background-color: #E3FCF7;
  border-radius: 4px;
  color: #001E2B;
  font-size: 13px;
  font-weight: bold;
  line-height: 24px;
  height: 24px;
  text-align: center;
  width: 83px;
  margin-bottom: 8px;
}

.emotion-17 {
  color: #001E2B;
  font-weight: bold;
}

.emotion-19 {
  list-style: none;
  padding-left: 0;
}

.emotion-21 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 40px;
  padding-top: 0!important;
  position: relative;
}

.emotion-21:not(:last-child) {
  padding-bottom: 16px;
}

.emotion-21:not(:last-child):before {
  content: '';
  position: absolute;
  left: 10px;
  top: 20px;
  height: calc(100% - 20px);
  border-left: solid 1px #00A35C;
}

.emotion-23 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 12px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-25 {
  color: #00A35C;
}

.emotion-27 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
  line-height: 13px;
  outline: none;
  color: #016BF8;
  color: #001E2B;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-27:focus {
  outline: none;
}

.emotion-27>code {
  color: #016BF8;
}

.emotion-27::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.emotion-27:focus .emotion-27::after {
  background-color: #0498EC;
}

.emotion-27:hover::after {
  background-color: #E8EDEB;
}

.emotion-27:hover,
.emotion-27:active {
  color: currentColor;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-28 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 40px;
  padding-top: 0!important;
  position: relative;
}

.emotion-28:not(:last-child) {
  padding-bottom: 16px;
}

.emotion-28:not(:last-child):before {
  content: '';
  position: absolute;
  left: 10px;
  top: 20px;
  height: calc(100% - 20px);
  border-left: solid 1px #E8EDEB;
}

.emotion-30 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border: solid 1px #00A35C;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 12px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-32 {
  color: #00A35C;
}

.emotion-39 {
  color: #3D4F58;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        What's Next
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        Set Up Atlas Connectivity
      </div>
      <a
        aria-disabled="false"
        class="emotion-8"
        data-leafygreen-ui="button"
        href="cloud/connectionstring"
      >
        <div
          class="emotion-9"
        />
        <div
          class="emotion-10"
        >
          Start Guide
        </div>
      </a>
    </div>
    <div
      class="emotion-11"
    >
      <div
        class="emotion-12 emotion-13"
      >
        <div
          class="emotion-14 emotion-15 emotion-16"
        >
          Chapter 1
        </div>
        <div
          class="emotion-17 emotion-18"
        >
          Atlas
        </div>
      </div>
      <ul
        class="emotion-19 emotion-20"
      >
        <li
          class="emotion-21 emotion-22"
          color="#00A35C"
        >
          <div
            class="emotion-23 emotion-24"
            color="transparent"
          >
            <svg
              aria-label="Checkmark Icon"
              class="emotion-25"
              fill="none"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6.306 9.05l5.455-5.455a1 1 0 011.414 0l.707.707a1 1 0 010 1.414l-7.067 7.068a1 1 0 01-1.5-.098l-3.049-3.97a1 1 0 01.184-1.402l.595-.457a1.25 1.25 0 011.753.23L6.306 9.05z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <a
            class="emotion-26 emotion-27"
            href="/cloud/account/"
          >
            Create and Manage a MongoDB Account
          </a>
        </li>
        <li
          class="emotion-28 emotion-22"
          color="#E8EDEB"
        >
          <div
            class="emotion-30 emotion-24"
            color="#00A35C"
          >
            <svg
              class="emotion-32"
              fill="currentColor"
              height="12"
              viewBox="0 0 7 12"
              width="7"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.47516 3.75H3.95081L4.88268 0.707813C4.97017 0.351563 4.71862 0 4.37518 0H1.22522C0.96272 0 0.739598 0.208594 0.704598 0.4875L0.00460634 6.1125C-0.0369557 6.45 0.208042 6.75 0.525225 6.75H3.12176L2.11333 11.3086C2.03458 11.6648 2.28833 12 2.62301 12C2.80676 12 2.98176 11.8969 3.07801 11.7188L6.92797 4.59375C7.1314 4.22109 6.87984 3.75 6.47516 3.75Z"
              />
            </svg>
          </div>
          <a
            class="emotion-26 emotion-27"
            href="/cloud/connectionstring/"
          >
            Set Up Atlas Connectivity
          </a>
        </li>
        <li
          class="emotion-28 emotion-22"
          color="#E8EDEB"
        >
          <div
            class="emotion-23 emotion-24"
            color="transparent"
          >
            <svg
              class="emotion-39"
              fill="currentColor"
              height="12"
              viewBox="0 0 7 12"
              width="7"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.47516 3.75H3.95081L4.88268 0.707813C4.97017 0.351563 4.71862 0 4.37518 0H1.22522C0.96272 0 0.739598 0.208594 0.704598 0.4875L0.00460634 6.1125C-0.0369557 6.45 0.208042 6.75 0.525225 6.75H3.12176L2.11333 11.3086C2.03458 11.6648 2.28833 12 2.62301 12C2.80676 12 2.98176 11.8969 3.07801 11.7188L6.92797 4.59375C7.1314 4.22109 6.87984 3.75 6.47516 3.75Z"
              />
            </svg>
          </div>
          <a
            class="emotion-26 emotion-27"
            href="/cloud/migrate-from-aws-to-atlas/"
          >
            Migrate a MongoDB Replicate Set from AWS to MongoDB Atlas
          </a>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;
